--- a/main/static/demo3player.css
+++ b/main/static/demo3player.css
@@ -88,12 +88,12 @@ img {
 
 }
 
-.img1{
-  /* border-radius: 1rem;
+/* .img1{
+  border-radius: 1rem;
   max-width: 200px;
-  display: block; */
+  display: block;
 
-}
+} */
 
 #poster{
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
@@ -145,7 +145,7 @@ img {
 .pbtn {
   padding: 15px;
   /* margin-top: -50px; */
-  margin-top: -300px;
+  margin-top: 30px;
   margin-left: 200px;
   border-radius: 30px;
   /* color: #7e8a98; */
@@ -1143,6 +1143,7 @@ body {
 }
 
 .episode-card .description {
+  left: 0px;
   font-size: 14px;
   line-height: 20px;
   min-height: 60px;
@@ -1218,7 +1219,7 @@ body {
 @media (min-width:768px) {
   .episode-card-wrapper {
       flex: 0 0 50%;
-      width: 50%;
+      width: 980px;
       padding: 15px;
   }
 }
@@ -1242,4 +1243,14 @@ body {
 
 .more {
   color: #09cef6
+}
+
+
+.card-header{
+  background-color: #fff;
+  /* padding: 0.5rem 1rem; */
+  /* margin-bottom: 0; */
+  /* background-color: rgba(0,0,0,.03); */
+  /* border-bottom: 1px solid rgba(0,0,0,.125) !important; */
+  border-bottom: 0 !important;
 }
