[fix] mainpage player slider (fin)

--- a/main/static/card.css
+++ b/main/static/card.css
@@ -442,6 +442,10 @@
     opacity: 0.7;
 }
 
+.play-icon {
+    font-size: 16px;
+}
+
 .play-icon:hover .hint {
     animation-name: playerHint;
     animation-delay: 1s;
