--- a/main/static/reset.css
+++ b/main/static/reset.css
@@ -293,7 +293,6 @@ li { list-style-type: none; }
     margin-right: 10px;
     -webkit-filter: drop-shadow(0px 0px 12px #afafaf);
     filter: drop-shadow(0px 0px 12px #afafaf);
-
     float: left;
     position: relative;
     transform: rotate(90deg);
@@ -452,31 +451,30 @@ li { list-style-type: none; }
     white-space: normal;
 }
 
-.summary{
+.summary-block {
     position: absolute;
     opacity: 0;
-    font-family: 'Nunito Sans', sans-serif;
     height: 165px;
     top: 230px;
     bottom: 30px;
     left: 5%;
     right: 5%;
+    border-radius: 18px;
+    background-color: #f2f2f2;
+}
+
+.summary{
+    font-family: 'Nunito Sans', sans-serif;
     font-size: 15px;
     line-height: 24px;
+    height: 80%;
     box-sizing: border-box;
     padding: 10px;
-    background-color: #f2f2f2;
     border-radius: 18px;
-   
-    /*     
-    outline: 3px solid white;
-    color: #DEDEDE;
-     */
     overflow: hidden;
-    white-space: nowrap;
     text-overflow: ellipsis;
     display: -webkit-box;
-    -webkit-line-clamp: 7;
+    -webkit-line-clamp: 5;
     -webkit-box-orient: vertical;
     white-space: normal;
 }
@@ -555,7 +553,7 @@ li { list-style-type: none; }
 
 .summary-tag {
     position: absolute;
-    left: 56%;
+    left: 68%;
     top: 72%;
     color: #293844;
     font-size: 15px;
