--- a/main/templates/demo3player.html
+++ b/main/templates/demo3player.html
@@ -49,65 +49,34 @@
     <div class="container-fluid" style="background-color: #FCF7F4 ; height: 100%;">
         <div class="row">
             <div class="col">
-                <p
-                    style="position: absolute; width: 492px; height: 93px; left: -100px; top: 0px; font-family: Roboto; font-style: normal; font-weight: normal; font-size: 30px; line-height: 93px; color: #da3c36;">
+                <p style="position: absolute; width: 492px; height: 93px; left: -100px; top: 0px; font-family: Roboto; font-style: normal; font-weight: normal; font-size: 30px; line-height: 93px; color: #da3c36;">
                     <b>PRSystem</b>
                 </p>
                 <!-- 這裡是幻燈片的部分，空白的地方模糊還沒有用好 -->
                 <div class="slideshow" style="position: relative;  overflow: hidden; border-radius: 15px;left: 50px;">
                     <img src="https://dummyimage.com/320x240/fff/fff.jpg&text=1" id="image1" data-bgcolor="#317a5c">
-
-
                     <img src="https://dummyimage.com/320x240/fff/fff.jpg&text=1" id="image2" data-bgcolor="#dedede">
-
-
                     <img src="https://dummyimage.com/320x240/fff/fff.jpg&text=1" id="image3" data-bgcolor="#ff0000">
-
-
                     <img src="https://dummyimage.com/320x240/fff/fff.jpg&text=1" id="image4" data-bgcolor="#000000">
-
                     <img src="https://dummyimage.com/320x240/fff/fff.jpg&text=1" id="image5" data-bgcolor="#317a5c">
-
-
                     <img src="https://dummyimage.com/320x240/fff/fff.jpg&text=1" id="image6" data-bgcolor="#dedede">
-
-
                     <img src="hhttps://dummyimage.com/320x240/fff/fff.jpg&text=1" id="image7" data-bgcolor="#ff0000">
-
-
                     <img src="https://dummyimage.com/320x240/fff/fff.jpg&text=1" id="image8" data-bgcolor="#000000">
-
                     <img src="https://dummyimage.com/320x240/fff/fff.jpg&text=1" id="image9" data-bgcolor="#317a5c">
-
-
                     <img src="https://dummyimage.com/320x240/fff/fff.jpg&text=1" id="image10" data-bgcolor="#dedede">
-
-
                     <img src="https://dummyimage.com/320x240/fff/fff.jpg&text=1" id="image11" data-bgcolor="#ff0000">
-
-
                     <img src="https://dummyimage.com/320x240/fff/fff.jpg&text=1" id="image12" data-bgcolor="#000000">
-
                     <img src="https://dummyimage.com/320x240/fff/fff.jpg&text=1" id="image13" data-bgcolor="#317a5c">
-
-
                     <img src="https://dummyimage.com/320x240/fff/fff.jpg&text=1" id="image14" data-bgcolor="#dedede">
-
-
                     <img src="https://dummyimage.com/320x240/fff/fff.jpg&text=1" id="image15" data-bgcolor="#ff0000">
-
-
                     <img src="https://dummyimage.com/320x240/fff/fff.jpg&text=1" id="image16" data-bgcolor="#000000">
-
                     <div class="background-image"></div>
                 </div>
-
 
                 <div class="rowplay">
                     <!-- 這是慢轉5秒鍵，但還沒弄好 -->
                     <!-- <div class="col-md-2" style="z-index: 3;">
                         <button class="pbtn lg neu buttons"><i class="fas fa-fast-backward"></i></button>
-
                     </div> -->
                     <!-- 播放暫停鍵 -->
                     <div class="col-md-2" style="z-index: 3;">
@@ -116,8 +85,6 @@
                             <!-- <i class="fas fa-play" id="play-pause"></i> -->
                             <i class="fas fa-play-circle fa-4x" id="play-pause"></i>
                         </button>
-
-
                     </div>
                     <!-- 這是快轉5秒鍵，但還沒弄好 -->
                     <!-- <div class="col-md-2" style="z-index: 3;">
@@ -129,13 +96,11 @@
                 <div class="rowtrack" style="position: relative ; top:145px;left:80px;">
                     <div class="col-md-2" style=" width: 100%; " >
                         <div class="track neu" id="outside">
-
                             <div id="inside" >
                                 <input type="range" id="pgbar" style="--min: 0;
 						            --max: 100;
 						            --val: 0"  value="0"/>
                             </div>
-
                         </div>
                         <div class="row" style="margin:2px">
                             <div class="col-md-6" style="color: #808080;">
@@ -145,8 +110,6 @@
                                 <div class="durationTime"></div>
                             </div>
                         </div>
-
-
                     </div>
                 </div>
                 
@@ -169,17 +132,13 @@
                                     input[0] %%%</a>
                             </button>
                         </transition-group>
-
-
                     </div>
                 </div>
-
-
             </div>
+
             <!-- <div class="col" style="overflow-y: scroll;height: 1000px;margin-top:80px"> -->
             <div class="col" style="margin-top:80px;margin-left: 30px;">
                 <!-- 右邊推薦episode卡片的地方 -->
-
                 <div class="episode-card-wrapper">
                     <a href="/episode/{{ message['recommendation'][0]['episode_uri'] }}" class="episode-card" style="transform: translateY(0px)!important;">
                         <div class="card-header">
@@ -188,8 +147,7 @@
                             </div>
                             <div class="episode-info-wrapper">
                                 <h3 class="title">{{ message['episode_name'] }}</h3>
-                                <div class="info">{{ message['show_name'] }}
-                                
+                                <div class="info">{{ message['show_name'] }}                    
                                     <!-- <span class="icon-explicit"></span>
                                     <span class="channel"></span> -->
                                 </div>
@@ -206,10 +164,7 @@
                             <span class="duration">35 mins</span>
                         </div> -->
                     </a>
-
-
                 </div>
-
 
                 <div>
                     <p style="font-size:larger ;font-weight: bold;">
@@ -217,7 +172,6 @@
                     </p>
                 </div>
                 
-
                 <div class="episode-card-wrapper">
                     <a href="/episode/{{ message['recommendation'][1]['episode_uri'] }}" class="episode-card">
                         <div class="card-header">
@@ -242,9 +196,7 @@
                             <span class="date">2021-03-16</span>
                             <span class="duration">35 mins</span>
                         </div> -->
-
                     </a>
-
                 </div>
 
                 <div class="episode-card-wrapper">
@@ -271,9 +223,7 @@
                             <span class="date">2021-03-16</span>
                             <span class="duration">35 mins</span>
                         </div> -->
-
                     </a>
-
                 </div>
 
                 <div class="episode-card-wrapper">
@@ -300,9 +250,7 @@
                             <span class="date">2021-03-16</span>
                             <span class="duration">35 mins</span>
                         </div> -->
-
                     </a>
-
                 </div>
 
                 <!-- <div class="episode-card-wrapper">
@@ -322,23 +270,16 @@
                         <div class="card-content">
                             <p class="description">{{ message["recommendation"][4]['episode_description'] }}</p>
                         </div>
-                      
-
                     </a>
-
                 </div> -->
-
-
             </div>
-
-
-
-
         </div>
     </div>
 </body>
+
 <style>
 </style>
+
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
 <script src="/static/demo3player.js?v=2"></script>
