--- a/main/templates/index_copy_V3.html
+++ b/main/templates/index_copy_V3.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@meilisearch/instant-meilisearch/templates/basic_search.css" />
+    <link rel="stylesheet" href="https://unpkg.com/@meilisearch/instant-meilisearch/templates/basic_search.css" />
     <script src="https://kit.fontawesome.com/257e3ba356.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
@@ -179,13 +179,13 @@
   </body>
     
   <!-- MeiliSearch CDN -->
-  <script src="https://cdn.jsdelivr.net/npm/@meilisearch/instant-meilisearch@0.3.2/dist/instant-meilisearch.umd.min.js"></script>
+  <script src="https://unpkg.com/@meilisearch/instant-meilisearch@0.3.2/dist/instant-meilisearch.umd.min.js"></script>
   <!-- Vue CDN -->
-  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
+  <script src="https://unpkg.com/vue@2.6.14/dist/vue.js"></script>
   <!-- Vue-round-slider CDN -->
-  <script src="https://cdn.jsdelivr.net/npm/vue-round-slider@1.0.1/dist/vue-roundslider.min.js"></script>
+  <script src="https://unpkg.com/vue-round-slider@1.0.1/dist/vue-roundslider.min.js"></script>
   <!-- Vue-toggle-switch CDN -->
-  <script src="https://cdn.jsdelivr.net/npm/vue-js-toggle-button@1.3.3/dist/index.min.js"></script>
+  <script src="https://cdn.jsdelivr.cn/vue-js-toggle-button@1.3.3/dist/index.js"></script>
   <!-- vue-instant-search CDN -->
   <script src="https://unpkg.com/vue-instantsearch@4.1.1/vue2/umd/index.js"></script>
   <!-- local Vue js -->
