[fix] cross origin error

--- a/main/templates/index_copy_V3.html
+++ b/main/templates/index_copy_V3.html
@@ -185,7 +185,7 @@
   <!-- Vue-round-slider CDN -->
   <script src="https://unpkg.com/vue-round-slider@1.0.1/dist/vue-roundslider.min.js"></script>
   <!-- Vue-toggle-switch CDN -->
-  <script src="https://cdn.jsdelivr.cn/vue-js-toggle-button@1.3.3/dist/index.js"></script>
+  <script src="https://unpkg.com/vue-js-toggle-button@1.3.3/dist/index.js"></script>
   <!-- vue-instant-search CDN -->
   <script src="https://unpkg.com/vue-instantsearch@4.1.1/vue2/umd/index.js"></script>
   <!-- local Vue js -->
