[add] caption load per min & image title

--- a/main/templates/demo3player.html
+++ b/main/templates/demo3player.html
@@ -117,7 +117,8 @@
                     <p style="display: none;" id="caption_all">
                         {{ message[ "captions" ] }}
                     </p>
-                    <p id="currenttime"></p>
+                    <!-- <p id="currenttime"></p> -->
+                    <p id="currentKeyword"></p>
                     <p id="caption"></p>
                 </div>
 
